--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
         <title> EPPR Clase 302 </title>
         <style>
             body{
-                ___________: rgba(0,255,187, 0.3);
+                background-color: rgba(255,0,255,0.3);
             }
             h1{
-                background-color: ___________;
+                background-color: rgba(192,192,192,0.3);
             }
             h2{
-                color: ___________;
+                color: darkorchid;
             }
-            .centro{
-                text-align: ___________;
+            .justificado{
+                text-align: justify;
             }
             .azul {
-                color: ___________;
+                color: dodgerblue;
             }
             .rojo {
-                color: ___________;
+                color: tomato;
+            }
+            .centrado{
+                text-align: center;
             }
         </style>
     </head>
@@ -27,18 +30,18 @@
      	<div>
 	        <h1>Intro a CSS</h1>
 	        <br/>
-	        <h1>Fondo Especial</h1>
-	        <h2>Color Especial</h2>
+	        <h2>Fondo Especial</h2>
+	        <h3>Color Especial</h3>
 	        <p>
 	            Parrafo Normal
 	        </p>
-	        <p class="centro">
-	            Parrafo Centrado
+	        <p class="justificado">
+	            Parrafo Justificado :)
 	        </p>
 	        <p class="azul">
 	            Parrafo en Azul
 	        </p>
-	        <p class="rojo centro">
+	        <p class="rojo centrado">
 	            Parrafo Centrado en Rojo
 	        </p>
      	</div>
@@ -52,6 +55,6 @@
 		</div>
     </body>
 <!-- COMPLETA ESTOS DATOS -->
-<!-- Nombre de usuario de GitHub: ___________ -->
-<!-- Fecha de hoy: ___________ -->
+<!-- Nombre de usuario de GitHub: GClau -->
+<!-- Fecha de hoy: 21/05/2021 -->
 </html>
