versión 2 de la tarea 302

--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@
             .centrado{
                 text-align: center;
             }
+            .italic {
+                font-style: italic;
+            }
         </style>
     </head>
     <body>
      	<div>
-	        <h1>Intro a CSS</h1>
+	        <h1>La Página</h1>
 	        <br/>
-	        <h2>Fondo Especial</h2>
-	        <h3>Color Especial</h3>
-	        <p>
-	            Parrafo Normal
+	        <h2>Adivina que estamos aprendiendo</h2>
+	        <h3>Lo especial de hoy es CSS</h3>
+	        <p class=italic>
+	            Estas clases son patrocinadas por EPPR
 	        </p>
 	        <p class="justificado">
-	            Parrafo Justificado :)
+	            Este debe ser un parrafo justificado :) pero creo que no se va a notar
 	        </p>
 	        <p class="azul">
 	            Parrafo en Azul
